agregar parrafo nuevo

--- a/carpeta/index.html
+++ b/carpeta/index.html
@@ -51,5 +51,7 @@
         <p class="smile">This is a paragraph.</p>
         <p>This is a paragraph.</p>
 </body>
-
+<p>hola a todos
+    
+</p>
 </html>
